force-app/main/default/objects/leaseworks__Thrust_Setting__c/leaseworks__Thrust_Setting__c.object-meta.xml
<CustomObject>
    <description>This will maintain Life Limit , utilization and remaining life for each Thrust of the LLPs.
Thrust Usage data is usually generated during the process of loading Life Limited Parts (LLPs). This specific table should only be populated in cases where there is a history of multi-thrust usage, enabling the loading of historical flight cycles of the LLPs at different engine thrust levels than the current one.
[MODULE: Asset]
[LOAD: Optional]
[PREREQUISITES: Life Limited Parts (LLPs)]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Thrust Usage</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Thrust Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>