force-app/main/default/objects/leaseworks__Thrust_Setting__c/fields/leaseworks__Cycle_Limit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cycle_Limit__c</fullName>
    <description>Field to capture Total Life of LLP</description>
    <label>Cycles Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>