force-app/main/default/objects/leaseworks__Thrust_Setting__c/fields/leaseworks__Cycles_Limit_Overridden__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cycles_Limit_Overridden__c</fullName>
    <description>This field identifies if the Cycle Limt has been modified by the user or not.</description>
    <formula>leaseworks__Y_hidden_Original_Cycle_Limit__c != leaseworks__Cycle_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will automatically check if the Cycle Limit field has been overridden from the initial value.</inlineHelpText>
    <label>Cycles Limit Overridden</label>
    <type>Checkbox</type>
</CustomField>