force-app/main/default/objects/leaseworks__Thrust_Setting__c/fields/leaseworks__Life_Limited_Part__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Life_Limited_Part__c</fullName>
    <description>This field is to make Master child relationship . Here the master is Life Limited Part and child is Thrust Setting .</description>
    <label>Life Limited Part (LLP)</label>
    <referenceTo>leaseworks__Sub_Components_LLPs__c</referenceTo>
    <relationshipName>Thrust_Setting</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>