force-app/main/default/objects/leaseworks__Thrust_Setting__c/fields/leaseworks__Remaining_Cycle__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Remaining_Cycle__c</fullName>
    <label>_Remaining Cycles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>