force-app/main/default/objects/leaseworks__Thrust_Setting__c/fields/leaseworks__Thrust__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Thrust__c</fullName>
    <label>Thrust</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>