force-app/main/default/objects/leaseworks__Thrust_Setting__c/fields/leaseworks__Weighted_Cycle_Used__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Weighted_Cycle_Used__c</fullName>
    <label>_Weighted Cycles Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>